--- a/.github/workflows/FrontendDeploy.yml
+++ b/.github/workflows/FrontendDeploy.yml
@@ -14,11 +14,6 @@ jobs:
    
     - uses: actions/checkout@v2
     
-    - name: Debug
-      run: echo $mykey
-      env:
-        mykey: ${{ secrets.FRONTEND_PRIVATE_KEY }}  
-    
     - name: Build the Docker Image
       run: docker build -t webimage web
     
@@ -30,19 +25,21 @@ jobs:
       with:
         host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
         username: ubuntu
-        key: ${{ secrets.FRONTEND_PRIVATE_KEY }}
+        key: $FRONTEND_PRIVATE_KEY
         script_stop: true
         script: | 
           sudo rm -rf ~/app || true
           sudo docker container stop $(sudo docker container ls -aq) || true
           docker system prune –af ––volumes || true
           mkdir ~/app
+      env:
+        FRONTEND_PRIVATE_KEY: ${{ secrets.FRONTEND_PRIVATE_KEY }}  
     
     - name: Push Docker Image to AWS
       uses: appleboy/scp-action@master
       with:
-        host: ${{ env.AWS_FRONTEND_PUBLIC_DNS }}
-        key: ${{ secrets.FRONTEND_PRIVATE_KEY }}
+        host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
+        key: $FRONTEND_PRIVATE_KEY
         username: ubuntu
         source: webimage.tar.gz
         target: ~/app/
@@ -50,9 +47,9 @@ jobs:
     - name: Run Docker Container
       uses: appleboy/ssh-action@master
       with:
-        host: ${{ env.AWS_FRONTEND_PUBLIC_DNS }}
+        host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
         username: ubuntu
-        key: ${{ secrets.FRONTEND_PRIVATE_KEY }}
+        key: $FRONTEND_PRIVATE_KEY
         script_stop: true
         script: | 
           cd ~/app
