--- a/.github/workflows/FrontendDeploy.yml
+++ b/.github/workflows/FrontendDeploy.yml
@@ -13,25 +13,6 @@ jobs:
     steps:
    
     - uses: actions/checkout@v2
-      
-    - name: eko
-      run: cat ./FrontendServerKeyPair.pem
-      
-    - name: cmod
-      run: chmod 777 ./FrontendServerKeyPair.pem
-      
-    - name: Clear the machine
-      uses: appleboy/ssh-action@master
-      with:
-        host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
-        username: ec2-user
-        key_path: ./FrontendServerKeyPair.pem
-        script_stop: true
-        script: | 
-          sudo rm -rf ~/app || true
-          sudo docker container stop $(sudo docker container ls -aq) || true
-          docker system prune –af ––volumes || true
-          mkdir ~/app
     
     - name: Build the Docker Image
       run: docker build -t webimage web
@@ -39,26 +20,26 @@ jobs:
     - name: Save the Docker Image
       run: docker save webimage | gzip > webimage.tar.gz
    
-#     - name: Clear the machine
-#       uses: appleboy/ssh-action@master
-#       with:
-#         host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
-#         username: ubuntu
-#         key: $FRONTEND_PRIVATE_KEY
-#         script_stop: true
-#         script: | 
-#           sudo rm -rf ~/app || true
-#           sudo docker container stop $(sudo docker container ls -aq) || true
-#           docker system prune –af ––volumes || true
-#           mkdir ~/app
-#       env:
-#         FRONTEND_PRIVATE_KEY: ${{ secrets.FRONTEND_PRIVATE_KEY }}  
+    - name: Clear the machine
+      uses: appleboy/ssh-action@master
+      with:
+        host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
+        username: ec2-user
+        key: $FrontendPrivateKey
+        script_stop: true
+        script: | 
+          sudo rm -rf ~/app || true
+          sudo docker container stop $(sudo docker container ls -aq) || true
+          docker system prune –af ––volumes || true
+          mkdir ~/app
+      env:
+        FrontendPrivateKey: ${{ secrets.FRONTEND_PRIVATE_KEY }}  
     
     - name: Push Docker Image to AWS
       uses: appleboy/scp-action@master
       with:
         host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
-        key: $FRONTEND_PRIVATE_KEY
+        key: $FrontendPrivateKey
         username: ubuntu
         source: webimage.tar.gz
         target: ~/app/
@@ -68,7 +49,7 @@ jobs:
       with:
         host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
         username: ubuntu
-        key: $FRONTEND_PRIVATE_KEY
+        key: $FrontendPrivateKey
         script_stop: true
         script: | 
           cd ~/app
