--- a/.github/workflows/FrontendDeploy.yml
+++ b/.github/workflows/FrontendDeploy.yml
@@ -25,22 +25,20 @@ jobs:
       with:
         host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
         username: ec2-user
-        key: $FrontendPrivateKey
+        key: ${{ secrets.FRONTEND_PRIVATE_KEY }}
         script_stop: true
         script: | 
           sudo rm -rf ~/app || true
           sudo docker container stop $(sudo docker container ls -aq) || true
           docker system prune –af ––volumes || true
           mkdir ~/app
-      env:
-        FrontendPrivateKey: ${{ secrets.FRONTEND_PRIVATE_KEY }}  
     
     - name: Push Docker Image to AWS
       uses: appleboy/scp-action@master
       with:
         host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
-        key: $FrontendPrivateKey
-        username: ubuntu
+        key: ${{ secrets.FRONTEND_PRIVATE_KEY }}
+        username: ec2-user
         source: webimage.tar.gz
         target: ~/app/
     
@@ -48,8 +46,8 @@ jobs:
       uses: appleboy/ssh-action@master
       with:
         host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
-        username: ubuntu
-        key: $FrontendPrivateKey
+        username: ec2-user
+        key: ${{ secrets.FRONTEND_PRIVATE_KEY }}
         script_stop: true
         script: | 
           cd ~/app
