--- a/.github/workflows/FrontendDeploy.yml
+++ b/.github/workflows/FrontendDeploy.yml
@@ -19,13 +19,21 @@ jobs:
     
     - name: Save the Docker Image
       run: docker save webimage | gzip > webimage.tar.gz
+
+    - name: Decrypt Key pair
+      run: gpg --batch --yes --decrypt --passphrase="$GPG_PASSWORD" --output FrontendServerKeyPair.pem ./FrontendServerKeyPair.pem.gpg
+      env:
+        GPG_PASSWORD: ${{ secrets.FRONTEND_GPG_PASSWORD }}
+        
+    - name: chmod to Key Pair
+      run: chmod 400 FrontendServerKeyPair.pem
    
     - name: Clear the machine
       uses: appleboy/ssh-action@master
       with:
         host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
         username: ec2-user
-        key_path: ./FrontendServerKeyPair.pem
+        key_path: FrontendServerKeyPair.pem
         script_stop: true
         script: | 
           sudo rm -rf ~/app || true
@@ -37,7 +45,7 @@ jobs:
       uses: appleboy/scp-action@master
       with:
         host: ec2-3-17-180-100.us-east-2.compute.amazonaws.com
-        key_path: ./FrontendServerKeyPair.pem
+        key_path: FrontendServerKeyPair.pem
         username: ec2-user
         source: webimage.tar.gz
         target: ~/app/
@@ -52,4 +60,4 @@ jobs:
         script: | 
           cd ~/app
           sudo docker load -i webimage.tar.gz
-          sudo docker run -p 80:80 
+          sudo docker run -p 80:80 webimage
